# Paper2Project

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
app/agents/: base.py  code_generator_agent.py  decision.py  notebook_builder_agent.py  paper_analyst.py  planner.py
app/api/: deps.py
app/api/routes/: jobs.py  ui.py
app/core/: config.py
app/models/: schemas.py
app/orchestration/: workflow.py
app/prompts/: code_generator.md  decision.md  notebook_builder.md  paper_analyst.md  planner.md
app/services/: code_generator.py  dataset_mapper.py  fallbacks.py  job_store.py  llm_client.py  llm_memory.py  notebook_builder.py  pdf_parser.py  source_enrichment.py
app/web/: index.html
docs/: architecture.md  implementation-plan.md
examples/: analysis.json  decision_config.json  parsed_paper.json  pipeline_plan.json
tests/: test_code_generator.py  test_dataset_mapper.py  test_job_store.py  test_llm_memory.py  test_pdf_parser.py
